# vpn_service

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  setup.cfg
auth_app/: __init__.py  apps.py  forms.py  urls.py  views.py
auth_app/templates/auth_app/: login.html
config/: __init__.py  celeryy.py  settings.py  urls.py
nginx/: Dockerfile
nginx/conf.d/: config.conf
project_services/: __init__.py  mixins.py
vpn_app/: admin.py  app_services.py  app_views.py  apps.py  forms.py  mixins.py  models.py  tasks.py  urls.py  utils.py  validators.py  views.py
vpn_app/admin_static_files/vpn_app/js/: find_link.js
vpn_app/management/: __init__.py
vpn_app/management/commands/: __init__.py  init_create_superuser.py
vpn_app/static/css/: style.css
vpn_app/templates/vpn_app/: account.html  base.html  index.html  top_bar.html
vpn_app/templates/vpn_app/auth/: password_change.html  user_creation_form.html
vpn_app/templates/vpn_app/site/: create_site_link.html  delete_site_link.html  update_site_link.html
