[tool.poetry]
name = "vpn-service"
version = "0.1.0"
description = ""
authors = ["victro-nuzhniy <nuzhniyva@gmail.com>"]
readme = "README.md"
packages = [{include = "vpn_service"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
black = "^23.12.0"
flake8 = "^6.1.0"
flake8-docstrings = "^1.7.0"
xenon = "^0.9.1"
isort = "^5.13.1"
pre-commit = "^3.6.0"


[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
