[tool.poetry]
name = "vpn-service"
version = "0.1.0"
description = ""
authors = ["victro-nuzhniy <nuzhniyva@gmail.com>"]
readme = "README.md"
packages = [{include = "vpn_service"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
python-dotenv = "^1.0.0"
beautifulsoup4 = "^4.12.2"
django-revproxy = "^0.12.0"
celery = "^5.3.6"
redis = "^5.0.1"
gunicorn = "^21.2.0"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
black = "^23.12.0"
flake8 = "^6.1.0"
flake8-docstrings = "^1.7.0"
xenon = "^0.9.1"
isort = "^5.13.1"
pre-commit = "^3.6.0"


[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
extend-exclude = '''
/(
  | dist
  | .pytest_cache
  | .tox
  | docs
  | docs_src
  | .venv
  | .mypy_cache
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = []
